# VB_ROS2

install/: local_setup.sh  setup.sh
install/cppOOP/share/cppOOP/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cppOOP/share/cppOOP/cmake/: cppOOPConfig.cmake
install/cpp_oop/lib/cpp_oop/: cpp_oop_test
install/cpp_oop/share/cpp_oop/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_cpp_pkg/lib/my_cpp_pkg/: cpp_node  robot_news_station  smartphone
install/my_cpp_pkg/share/ament_index/resource_index/parent_prefix_path/: my_cpp_pkg
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh  package.sh
install/my_py_pkg/lib/my_py_pkg/: Smartphone  robo_news_station  robo_news_station = my_py_pkg.robot_news_station:mainSmartphone
install/my_py_pkg/share/my_py_pkg/: package.sh
log/: latest_build
src/cpp_oop/: CMakeLists.txt
src/cpp_oop/src/: node_file.cpp
src/install/: local_setup.sh  setup.sh
src/install/my_cpp_pkg/share/my_cpp_pkg/: package.ps1  package.sh
src/install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
src/log/: latest_build
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: my_first_node.cpp  robot_news_station.cpp  smartphone.cpp  template_cpp_node.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: robot_news_station.py  smartphone.py
